remove obsolete JVM arguments (#44)